Update enums
