# models/SMSTenDLCCampaign.ts
@@ -10,13 +10,9 @@
  * Do not edit the class manually.
  */
 
+import { SMSTenDLCCampaignStatus } from './../models/SMSTenDLCCampaignStatus';
 import { HttpFile } from '../http/http';
 
-export enum SMSTenDLCCampaignStatusEnum {
-
-    ACTIVE = 'ACTIVE',
-    EXPIRED = 'EXPIRED'
-}
 
 interface AttributeType {
     name: string
@@ -30,7 +26,7 @@ interface ArgumentsType {
     'campaignId': string;
     'cspId': string;
     'resellerId'?: string;
-    'status'?: SMSTenDLCCampaignStatusEnum;
+    'status'?: SMSTenDLCCampaignStatus;
     'createDate'?: Date;
     'autoRenewal'?: boolean;
     'billedDate'?: Date;
@@ -80,10 +76,7 @@ export class SMSTenDLCCampaign {
     * Alphanumeric identifier of the reseller that you want to associate with this campaign.
     */
     'resellerId'?: string;
-    /**
-    * Current campaign status. Possible values: ACTIVE, EXPIRED. A newly created campaign defaults to ACTIVE status. 
-    */
-    'status'?: SMSTenDLCCampaignStatusEnum;
+    'status'?: SMSTenDLCCampaignStatus;
     /**
     * Unix timestamp when campaign was created.
     */
@@ -248,7 +241,7 @@ export class SMSTenDLCCampaign {
         {
             "name": "status",
             "baseName": "status",
-            "type": "SMSTenDLCCampaignStatusEnum",
+            "type": "SMSTenDLCCampaignStatus",
             "format": "",
 
             
