# models/all.ts
@@ -23,6 +23,7 @@ export * from './CallStatusWebhook'
 export * from './Capabilities'
 export * from './CompletionRequest'
 export * from './CompletionResult'
+export * from './CompletionResultStatus'
 export * from './ConferenceList'
 export * from './ConferenceParticipantList'
 export * from './ConferenceParticipantResult'
@@ -99,13 +100,21 @@ export * from './RemoveFromConference'
 export * from './RemoveFromQueueNotificationWebhook'
 export * from './RequestType'
 export * from './SMSTenDLCBrand'
+export * from './SMSTenDLCBrandAltBusinessIdType'
+export * from './SMSTenDLCBrandEntityType'
+export * from './SMSTenDLCBrandIdentityStatus'
+export * from './SMSTenDLCBrandRelationship'
+export * from './SMSTenDLCBrandStockExchange'
 export * from './SMSTenDLCBrandsListResult'
 export * from './SMSTenDLCCampaign'
+export * from './SMSTenDLCCampaignStatus'
 export * from './SMSTenDLCCampaignsListResult'
 export * from './SMSTenDLCPartnerCampaign'
 export * from './SMSTenDLCPartnerCampaignBrand'
+export * from './SMSTenDLCPartnerCampaignStatus'
 export * from './SMSTenDLCPartnerCampaignsListResult'
 export * from './SMSTollFreeCampaign'
+export * from './SMSTollFreeCampaignRegistrationStatus'
 export * from './SMSTollFreeCampaignsListResult'
 export * from './Say'
 export * from './SendDigits'
