# types/PromiseAPI.ts
@@ -27,6 +27,7 @@ import { CallStatusWebhook } from '../models/CallStatusWebhook';
 import { Capabilities } from '../models/Capabilities';
 import { CompletionRequest } from '../models/CompletionRequest';
 import { CompletionResult } from '../models/CompletionResult';
+import { CompletionResultStatus } from '../models/CompletionResultStatus';
 import { ConferenceList } from '../models/ConferenceList';
 import { ConferenceParticipantList } from '../models/ConferenceParticipantList';
 import { ConferenceParticipantResult } from '../models/ConferenceParticipantResult';
@@ -103,13 +104,21 @@ import { RemoveFromConference } from '../models/RemoveFromConference';
 import { RemoveFromQueueNotificationWebhook } from '../models/RemoveFromQueueNotificationWebhook';
 import { RequestType } from '../models/RequestType';
 import { SMSTenDLCBrand } from '../models/SMSTenDLCBrand';
+import { SMSTenDLCBrandAltBusinessIdType } from '../models/SMSTenDLCBrandAltBusinessIdType';
+import { SMSTenDLCBrandEntityType } from '../models/SMSTenDLCBrandEntityType';
+import { SMSTenDLCBrandIdentityStatus } from '../models/SMSTenDLCBrandIdentityStatus';
+import { SMSTenDLCBrandRelationship } from '../models/SMSTenDLCBrandRelationship';
+import { SMSTenDLCBrandStockExchange } from '../models/SMSTenDLCBrandStockExchange';
 import { SMSTenDLCBrandsListResult } from '../models/SMSTenDLCBrandsListResult';
 import { SMSTenDLCCampaign } from '../models/SMSTenDLCCampaign';
+import { SMSTenDLCCampaignStatus } from '../models/SMSTenDLCCampaignStatus';
 import { SMSTenDLCCampaignsListResult } from '../models/SMSTenDLCCampaignsListResult';
 import { SMSTenDLCPartnerCampaign } from '../models/SMSTenDLCPartnerCampaign';
 import { SMSTenDLCPartnerCampaignBrand } from '../models/SMSTenDLCPartnerCampaignBrand';
+import { SMSTenDLCPartnerCampaignStatus } from '../models/SMSTenDLCPartnerCampaignStatus';
 import { SMSTenDLCPartnerCampaignsListResult } from '../models/SMSTenDLCPartnerCampaignsListResult';
 import { SMSTollFreeCampaign } from '../models/SMSTollFreeCampaign';
+import { SMSTollFreeCampaignRegistrationStatus } from '../models/SMSTollFreeCampaignRegistrationStatus';
 import { SMSTollFreeCampaignsListResult } from '../models/SMSTollFreeCampaignsListResult';
 import { Say } from '../models/Say';
 import { SendDigits } from '../models/SendDigits';
